# sdl-template

./: CMakeLists.txt  README.md  Sprite.cpp  Sprite.h  main.cpp
