cmake_minimum_required(VERSION 3.10)
project(sdl_template)

set(CMAKE_CXX_STANDARD 14)

add_executable(sdl_template main.cpp Sprite.cpp Sprite.h)

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})